--- a/gamestorm/index.html
+++ b/gamestorm/index.html
@@ -115,7 +115,7 @@
 									<div class="games_content">
 										<h4 class="games_title">Super Water Stuntman Run 2021</h4>
 										<p class="games_text">These games were chosen as some of the best, some of which will become weekly editor's picks!</p>
-										<a href="#" class="cta_btn">More info</a>
+										<a href="./games.html" class="cta_btn">More info</a>
 									</div>
 								</div>
 							</div>
@@ -125,7 +125,7 @@
 									<div class="games_content">
 										<h4 class="games_title">Real Bike Cycle Racing 3D: BMX</h4>
 										<p class="games_text">These games were chosen as some of the best, some of which will become weekly editor's picks!</p>
-										<a href="#" class="cta_btn">More info</a>
+										<a href="./games.html" class="cta_btn">More info</a>
 									</div>
 								</div>
 							</div>
@@ -135,7 +135,7 @@
 									<div class="games_content">
 										<h4 class="games_title">Ultimate Sniper Shooting Games</h4>
 										<p class="games_text">These games were chosen as some of the best, some of which will become weekly editor's picks!</p>
-										<a href="#" class="cta_btn">More info</a>
+										<a href="./games.html" class="cta_btn">More info</a>
 									</div>
 								</div>
 							</div>
@@ -152,27 +152,27 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-12">
-					<div class="d-flex justify-content-between align-items-start"><h3 class="contentBlock_title">Blog</h3> <a href="#" class="cta_btn">All news</a></div>
+					<div class="d-flex justify-content-between align-items-start"><h3 class="contentBlock_title">Blog</h3> <a href="./blog.html" class="cta_btn">All news</a></div>
 				</div>
 				<div class="col-12">
 					<div class="blog_slider swiper">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<a href="#" class="blog_item">
+								<a href="./blog-page.html" class="blog_item">
 									<img class="blog_img" src="./assets/images/content/blog1_prev.jpg" alt="Leveling Up the Holidays: Online Gaming Trends in 2023">
 									<h2 class="blog_title">Leveling Up the Holidays: Online Gaming Trends in 2023</h2>
 									<div class="blog_date">December, 2023</div>
 								</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#" class="blog_item">
+								<a href="./blog-page.html" class="blog_item">
 									<img class="blog_img" src="./assets/images/content/blog2_prev.jpg" alt="The Future Unveiled: Online Gaming Predictions for 2024">
 									<h2 class="blog_title">The Future Unveiled: Online Gaming Predictions for 2024</h2>
 									<div class="blog_date">November, 2023</div>
 								</a>
 							</div>
 							<div class="swiper-slide">
-								<a href="#" class="blog_item">
+								<a href="./blog-page.html" class="blog_item">
 									<img class="blog_img" src="./assets/images/content/blog3_prev.jpg" alt="Leveling Up the Game: The Impact of In-App Advertising on Online Gaming">
 									<h2 class="blog_title">Leveling Up the Game: The Impact of In-App Advertising on Online Gaming</h2>
 									<div class="blog_date">October, 2023</div>
@@ -197,11 +197,11 @@
 				<div class="col-xl-6 col-lg-6">
 					<nav role="navigation">
 						<ul class="navigation_menu">
-							<li><a class="navigation_item" href="#">Games</a></li>
-							<li><a class="navigation_item" href="#">About</a></li>
-							<li><a class="navigation_item" href="#">Advertisers</a></li>
-							<li><a class="navigation_item" href="#">Blog</a></li>
-							<li><a class="navigation_item" href="#">Support</a></li>
+							<li><a class="navigation_item" href="./games.html">Games</a></li>
+							<li><a class="navigation_item" href="./about.html">About</a></li>
+							<li><a class="navigation_item" href="./advertisers.html">Advertisers</a></li>
+							<li><a class="navigation_item" href="./blog.html">Blog</a></li>
+							<li><a class="navigation_item" href="./support.html">Support</a></li>
 						</ul>
 					</nav>
 				</div>
