--- a/gamestorm/policy.html
+++ b/gamestorm/policy.html
@@ -123,11 +123,11 @@
 				<div class="col-xl-6 col-lg-6">
 					<nav role="navigation">
 						<ul class="navigation_menu">
-							<li><a class="navigation_item" href="#">Games</a></li>
-							<li><a class="navigation_item" href="#">About</a></li>
-							<li><a class="navigation_item" href="#">Advertisers</a></li>
-							<li><a class="navigation_item" href="#">Blog</a></li>
-							<li><a class="navigation_item" href="#">Support</a></li>
+							<li><a class="navigation_item" href="./games.html">Games</a></li>
+							<li><a class="navigation_item" href="./about.html">About</a></li>
+							<li><a class="navigation_item" href="./advertisers.html">Advertisers</a></li>
+							<li><a class="navigation_item" href="./blog.html">Blog</a></li>
+							<li><a class="navigation_item" href="./support.html">Support</a></li>
 						</ul>
 					</nav>
 				</div>
