--- a/gamestorm/blog.html
+++ b/gamestorm/blog.html
@@ -168,8 +168,8 @@
 					<div class="col-lg">
 						<nav role="navigation">
 							<ul class="policy">
-								<li><a href="#" class="policy_item">Terms of service</a></li>
-								<li><a href="#" class="policy_item">Privacy Policy</a></li>
+								<li><a href="./policy.html" class="policy_item">Terms of service</a></li>
+								<li><a href="./policy.html" class="policy_item">Privacy Policy</a></li>
 							</ul>
 						</nav>
 					</div>
