--- a/gamestorm/index.html
+++ b/gamestorm/index.html
@@ -79,7 +79,7 @@
 				<div class="col-lg-10">
 					<h1 class="pageBanner_title"><span>Unleash</span> your inner gamer in the eye of <br> the Game Storm!</h1>
 					<p class="pageBanner_description">Bring your content to life with GameStorm</p>
-					<a href="#" class="cta_btn">Learn more</a>
+					<a href="./about.html" class="cta_btn">Learn more</a>
 				</div>
 				<div class="col-12">
 					<p class="explore">scroll to explore</p>
@@ -224,8 +224,8 @@
 					<div class="col-lg">
 						<nav role="navigation">
 							<ul class="policy">
-								<li><a href="#" class="policy_item">Terms of service</a></li>
-								<li><a href="#" class="policy_item">Privacy Policy</a></li>
+								<li><a href="./policy.html" class="policy_item">Terms of service</a></li>
+								<li><a href="./policy.html" class="policy_item">Privacy Policy</a></li>
 							</ul>
 						</nav>
 					</div>
