--- a/btcd/inner-page-nophoto.html
+++ b/btcd/inner-page-nophoto.html
@@ -40,7 +40,7 @@
 							<li><a class="mainMenu__link" href="#">Послуги</a></li>
 							<li><a class="mainMenu__link" href="#">Клієнти</a></li>
 						</ul>
-						<span class="mainLogo"><img src="./img/main/btcd-logo-accent.svg" alt="better call daria logotype"></span>
+						<a href="/" class="mainLogo"><img src="./img/main/btcd-logo-accent.svg" alt="better call daria logotype"></a>
 						<ul class="mainMenu">
 							<li><a class="mainMenu__link" href="#">Кейси</a></li>
 							<li><a class="mainMenu__link" href="#">Контакти</a></li>
@@ -96,9 +96,30 @@
 					</div>
 				</div>
 			</div>
-			<div class="row">
-				<img src="./img/main/innerContent/innerNoPhoto.png" alt="Продаж меблів преміум-сегмента в Instagram" class="img-responsive">
-			</div>
+		</div>
+	</section>
+
+	<section class="btcdSection__mvLine">
+		<div class="mvLine__text mvLine__top">
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+		</div>
+		<div class="mvLine__text mvLine__bottom">
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
+			<span>NEED SMM? BETTER CALL DARIA</span>
 		</div>
 	</section>
 
@@ -223,50 +244,90 @@
 	</section>
 	
 
-	<section class="btcdSection__keyses">
+	<section id="keyses" class="btcdSection__keyses">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12">
 					<h2 class="btcdSection__title">Кейси</h2>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<a href="./inner-page-photo.html" target="_blank">
+			<div class="row keyses__wrapper">
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
 						<img class="img-responsive" src="./img/main/keyses/1.png" alt="keys 1">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Strategy</div>
-						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-photo.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/2.png" alt="keys 2">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Targeting</div>
-						<div class="keyses__title">Коротка назва кейсу </div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-nophoto.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/3.png" alt="keys 3">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Content creation</div>
-						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-nophoto.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
-					</a>
 					<div class="keyses">
 						<div class="keyses__category">Influencer marketing</div>
 						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
 					</div>
-				</div> 
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/2.png" alt="keys 2">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/3.png" alt="keys 3">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
 			</div>
 			<div class="row">
 				<div class="col-12">
