--- a/btcd/index.html
+++ b/btcd/index.html
@@ -37,14 +37,14 @@
 				<div class="col-12">
 					 <nav class="headerNav">
 						<ul class="mainMenu">
-							<li><a class="mainMenu__link" href="#">Послуги</a></li>
-							<li><a class="mainMenu__link" href="#">Клієнти</a></li>
+							<li><a class="mainMenu__link" href="#services">Послуги</a></li>
+							<li><a class="mainMenu__link" href="#clients">Клієнти</a></li>
 						</ul>
 						<span class="mainLogo"><img src="./img/main/btcd-logo-accent.svg" alt="better call daria logotype"></span>
 						<ul class="mainMenu">
-							<li><a class="mainMenu__link" href="#">Кейси</a></li>
-							<li><a class="mainMenu__link" href="#">Контакти</a></li>
-							<li><a class="mainMenu__link" href="#">UA</a></li>
+							<li><a class="mainMenu__link" href="#keyses">Кейси</a></li>
+							<li><a class="mainMenu__link" href="#contacts">Контакти</a></li>
+							<li><a class="mainMenu__link" href="/">UA</a></li>
 						</ul>
 						<div class="hamburger-wrapper">
 							<button class="hamburger hamburger--squeeze" type="button"
@@ -67,7 +67,7 @@
 						<div class="topBanner__logo">
 							<img class="img-responsive" src="./img/main/btcd-logo-light.svg" alt="better call daria logotype">
 						</div>
-						<a href="tel:000" class="mainButton">Call <span class="mainButton__icon"></span></a>
+						<a href="#contacts" class="mainButton">Call <span class="mainButton__icon"></span></a>
 					</div>
 				</div>
 			</div>
@@ -75,10 +75,25 @@
 		</div>
 	</header>
 
-	<section class="btcdSection__servList">
-		<h2 class="btcdSection__title">
-			Коли потрібно телефонувати
-		</h2>
+	<section class="btcdSection__servlistHeading">
+		<div class="container-fluid">
+			<div class="row g-0 justify-content-between align-items-center">
+				<div class="col-xl-9">
+					<h2 class="btcdSection__title">
+						Коли потрібно телефонувати
+					</h2>
+				</div>
+				<div class="col-xl-3">
+					<div class="swiper__navigation">
+						<div class="swiper__navigation__button swiper__navigation__prev"></div>
+						<div class="swiper__navigation__button swiper__navigation__next"></div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</section>
+	
+	<section id="services" class="btcdSection__servList">
 		<div class="swiper__container swiper__services">
 			<div class="swiper swiper__servList">
 				<div class="swiper-wrapper">
@@ -138,12 +153,12 @@
 		</div>
 		<div class="btcdSection__mainCTA">
 			Не знаєш, що потрібно?
-<a href="tel:000" class="mainButton">Call <span class="mainButton__icon"></span></a>
+<a href="#contacts" class="mainButton">Call <span class="mainButton__icon"></span></a>
 й вирішимо разом :)
 		</div>
 	</section>
 
-	<section class="btcdSection__clients">
+	<section id="clients" class="btcdSection__clients">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12">
@@ -223,50 +238,90 @@
 		</div>
 	</section>
 
-	<section class="btcdSection__keyses">
+	<section id="keyses" class="btcdSection__keyses">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-12">
 					<h2 class="btcdSection__title">Кейси</h2>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-lg-6">
-					<a href="./inner-page-photo.html" target="_blank">
+			<div class="row keyses__wrapper">
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
 						<img class="img-responsive" src="./img/main/keyses/1.png" alt="keys 1">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Strategy</div>
-						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
 					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-photo.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/2.png" alt="keys 2">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Targeting</div>
-						<div class="keyses__title">Коротка назва кейсу </div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-nophoto.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/3.png" alt="keys 3">
-					</a>
-					<div class="keyses">
-						<div class="keyses__category">Content creation</div>
-						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
-					</div>
-				</div>
-				<div class="col-lg-6">
-					<a href="./inner-page-nophoto.html" target="_blank">
-						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
-					</a>
 					<div class="keyses">
 						<div class="keyses__category">Influencer marketing</div>
 						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
 					</div>
-				</div> 
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/2.png" alt="keys 2">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/3.png" alt="keys 3">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
+
+				<a href="./inner-page-nophoto.html" target="_blank" class="keyses__item hidden col-lg-6">
+					<div class="keyses__photo">
+						<img class="img-responsive" src="./img/main/keyses/4.png" alt="keys 4">
+					</div>
+					<div class="keyses">
+						<div class="keyses__category">Influencer marketing</div>
+						<div class="keyses__title">Довга назва кейсу з 5 слів</div>
+					</div>
+				</a>
 			</div>
 			<div class="row">
 				<div class="col-12">
@@ -284,7 +339,7 @@
 			</div>
 			<div class="row">
 				<div class="col-xxl-7">
-					<div class="footer__contacts__title">Контакти</div>
+					<div id="contacts" class="footer__contacts__title">Контакти</div>
 					<div class="footer__contacts__descr">Xочете поговорити чи отримати пропозицію? Не соромтеся зв’язатись з нами, ми не кусаємось.</div>
 					<a class="footer__contacts__mail footer__contacts__activeLink" href="mailto:hello@bettercalldaria.com">hello@bettercalldaria.com</a>
 					<a class="footer__contacts__phone footer__contacts__activeLink" href="tel:+380784516312">+380 78 451 63 12</a>
@@ -301,8 +356,8 @@
 						<div class="col-xl-4 col-6">
 							<div class="footer__contacts__categoryTitle">Info</div>
 							<ul class="footer__contacts__menu">
-								<li><a href="#" class="footer__contacts__link">Privacy Policy</a></li>
-								<li><a href="#" class="footer__contacts__link">Terms of use</a></li>
+								<li><a href="./inner-text.html" class="footer__contacts__link">Privacy Policy</a></li>
+								<li><a href="./inner-text.html" class="footer__contacts__link">Terms of use</a></li>
 							</ul>
 						</div>
 						<div class="col-12">
@@ -332,15 +387,15 @@
 			</div>
 		</div>
 		<ul>
-			<li><a class="mobileMenu__link" href="#">Послуги</a></li>
-			<li><a class="mobileMenu__link" href="#">Клієнти</a></li>
-			<li><a class="mobileMenu__link" href="#">Кейси</a></li>
-			<li><a class="mobileMenu__link" href="#">Контакти</a></li>
+			<li><a class="mobileMenu__link" href="#services">Послуги</a></li>
+			<li><a class="mobileMenu__link" href="#clients">Клієнти</a></li>
+			<li><a class="mobileMenu__link" href="#keyses">Кейси</a></li>
+			<li><a class="mobileMenu__link" href="#contacts ">Контакти</a></li>
 		</ul>
 		<div class="langWrapper">
 			<ul class="lang">
-				<li><a class="langItem" href="#">EN</a></li>
-				<li><a class="langItem active" href="#">UA</a></li>
+				<li><a class="langItem" href="/">EN</a></li>
+				<li><a class="langItem active" href="/">UA</a></li>
 			</ul>
 		</div>
 	</div>
