--- a/btcd/index.html
+++ b/btcd/index.html
@@ -13,9 +13,9 @@
 
 	<meta property="og:image" content="./img/main/meta-photo.jpg">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-icon-180x180.png">
+	<link rel="icon" type="image/png" sizes="36x36" href="./img/favicon/android-icon-36x36.png">
+	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/android-icon-48x48.png">
 
 	<link rel="manifest" href="./img/favicon/manifest.json">
 
