--- a/btcd/inner-page-photo.html
+++ b/btcd/inner-page-photo.html
@@ -30,7 +30,7 @@
 
 </head>
 
-<body>
+<body class="innerPage">
 	<header class="btcdSection">
 		<div class="container-fluid">
 			<div class="row g-0">
