--- a/btcd/inner-page-nophoto.html
+++ b/btcd/inner-page-nophoto.html
@@ -125,7 +125,7 @@
 	<section class="btcdSection__prod">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-xl-10">
+				<div class="col-xxl-10">
 					<div class="prod__wrapper">
 						<h2 class="btcdSection__title">Реалізація</h2>
 						<div class="prod__stage">
