--- a/btcd/inner-text.html
+++ b/btcd/inner-text.html
@@ -188,13 +188,13 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-xxl-7">
-					<div class="footer__contacts__title">Контакти</div>
+				<div class="col-xl-6">
+					<div id="contacts" class="footer__contacts__title">Контакти</div>
 					<div class="footer__contacts__descr">Xочете поговорити чи отримати пропозицію? Не соромтеся зв’язатись з нами, ми не кусаємось.</div>
 					<a class="footer__contacts__mail footer__contacts__activeLink" href="mailto:hello@bettercalldaria.com">hello@bettercalldaria.com</a>
 					<a class="footer__contacts__phone footer__contacts__activeLink" href="tel:+380784516312">+380 78 451 63 12</a>
 				</div>
-				<div class="col-xxl-5">
+				<div class="col-xl-6">
 					<div class="row justify-content-between  g-0">
 						<div class="col-xl-4 col-6">
 							<div class="footer__contacts__categoryTitle">Social media</div>
@@ -206,16 +206,16 @@
 						<div class="col-xl-4 col-6">
 							<div class="footer__contacts__categoryTitle">Info</div>
 							<ul class="footer__contacts__menu">
-								<li><a href="#" class="footer__contacts__link">Privacy Policy</a></li>
-								<li><a href="#" class="footer__contacts__link">Terms of use</a></li>
+								<li><a href="./inner-text.html" class="footer__contacts__link">Privacy Policy</a></li>
+								<li><a href="./inner-text.html" class="footer__contacts__link">Terms of use</a></li>
 							</ul>
 						</div>
-						<div class="col-12">
+						<didv class="col-12">
 							<div class="footer__contacts__wrapper">
 								<div class="footer__contacts__copy">2024 © bettercalldaria. All rights reserved.</div>
 								<a href="#" class="footer__contacts__by">Design by <span>DM</span></a>
 							</div>
-						</div>
+						</didv>
 					</div>
 				</div>
 			</div>
