--- a/cypex/index.html
+++ b/cypex/index.html
@@ -13,11 +13,12 @@
 
 	<meta property="og:image" content="./img/main/covers/cover__main.jpg">
 
-	<link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-icon-180x180.png">
-	<link rel="icon" type="image/png" sizes="36x36" href="./img/favicon/android-icon-36x36.png">
-	<link rel="icon" type="image/png" sizes="48x48" href="./img/favicon/android-icon-48x48.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="./img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="./img/favicon/android-chrome-96x96.png">
 
-	<link rel="manifest" href="./img/favicon/manifest.json">
+	<link rel="manifest" href="./img/favicon/site.webmanifest.json">
 
 	<!-- Chrome, Firefox OS and Opera -->
 	<meta name="theme-color" content="#E5FF5D">
@@ -70,8 +71,8 @@
 							<p>Empower your security operations with unparalleled visibility into hacker strategies and infrastructure. Stay ahead of emerging threats with data-driven insights from the red side</p>
 						</div>
 						<div class="btnGroup">
-							<button class="button fill">How can we help you</button>
-							<button class="button blur">The strenghts of cypex</button>
+							<a href="#products" class="button fill">How can we help you</a>
+							<a href="#mainStrengths" class="button blur">The strenghts of cypex</a>
 						</div>
 					</div>
 				</div>
@@ -144,7 +145,7 @@
 			</div>
 		</section>
 
-		<section class="products">
+		<section class="products" id="products">
 			<div class="sectionTitle">
 				Our Products
 			</div>
@@ -186,6 +187,12 @@
 								<!-- Tab 2 Content -->
 								<div class="productsTab__item" id="tab2">
 									<div class="productsTab__content">
+										<label class="productsTab__toggle">
+											<input type="checkbox">
+											<div class="fSoc pos__1">For Soc team</div>
+											<span class="toggle"></span>
+											<div class="fCiso pos__2">For Ciso</div>
+										</label>
 										<div class="productsTab__preTitle">Real-Time Threat Detection with RedSight</div>
 										<div class="productsTab__title">RedSight provides unparalleled visibility...</div>
 										<div class="productsTab__description">
@@ -199,6 +206,12 @@
 								<!-- Tab 3 Content -->
 								<div class="productsTab__item" id="tab3">
 									<div class="productsTab__content">
+										<label class="productsTab__toggle">
+											<input type="checkbox">
+											<div class="fSoc pos__1">For Soc team</div>
+											<span class="toggle"></span>
+											<div class="fCiso pos__2">For Ciso</div>
+										</label>
 										<div class="productsTab__preTitle">Advanced Analysis with ThreatLens</div>
 										<div class="productsTab__title">ThreatLens enables proactive threat management...</div>
 										<div class="productsTab__description">
@@ -215,7 +228,7 @@
 			</div>
 		</section>
 
-		<section class="mainStrengths">
+		<section class="mainStrengths" id="mainStrengths">
 			<div class="sectionTitle">
 				Main Strengths of Our Company
 			</div>
