--- a/cypex/index.html
+++ b/cypex/index.html
@@ -80,71 +80,71 @@
 		</div>
 	</header>
 
-	<main>
-		<section class="keyPoints">
-			<div class="sectionTitle keyPoints__anim">
-				Key points
-			</div>
-			<div class="container">
-				<div class="row">
-					<div class="col-12">
-						<div class="keyPoints__wrapper">
-						
-							<div class="infoItem keyPoints__anim">
-								<div class="infoItem__wrapper">
-									<div class="infoItem__title">
-										Contextual Insight
-									</div>
-									<div class="infoItem__body">
-										<p>
-											Cypex provides context to different attributes of IOCs and IP addresses
-										</p>
-									</div>
+	<section class="keyPoints">
+		<div class="sectionTitle keyPoints__anim">
+			Key points
+		</div>
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<div class="keyPoints__wrapper">
+					
+						<div class="infoItem keyPoints__anim">
+							<div class="infoItem__wrapper">
+								<div class="infoItem__title">
+									Contextual Insight
 								</div>
-								<img class="infoItem__photo" src="./img/main/info/info__item__1.svg" alt="Contextual Insight">
-							</div>
-
-							<div class="infoItem keyPoints__anim">
-								<div class="infoItem__wrapper">
-									<div class="infoItem__title">
-										Visual Investigations
-									</div>
-									<div class="infoItem__body">
-										<p>
-											Cypex uses visualization to highlight connections and enhance investigations
-										</p>
-									</div>
+								<div class="infoItem__body">
+									<p>
+										Cypex provides context to different attributes of IOCs and IP addresses
+									</p>
 								</div>
-								<img class="infoItem__photo" src="./img/main/info/info__item__2.svg" alt="Contextual Insight">
 							</div>
-
-							<div class="infoItem keyPoints__anim">
-								<div class="infoItem__wrapper">
-									<div class="infoItem__title">
-										Threat Detection
-									</div>
-									<div class="infoItem__body">
-										<p>
-											Cypex leverages unique data sources to identify malicious activities before they become active
-										</p>
-									</div>
-								</div>
-								<img class="infoItem__photo" src="./img/main/info/info__item__3.svg" alt="Contextual Insight">
-							</div>
-
+							<img class="infoItem__photo" src="./img/main/info/info__item__1.svg" alt="Contextual Insight">
 						</div>
+
+						<div class="infoItem keyPoints__anim">
+							<div class="infoItem__wrapper">
+								<div class="infoItem__title">
+									Visual Investigations
+								</div>
+								<div class="infoItem__body">
+									<p>
+										Cypex uses visualization to highlight connections and enhance investigations
+									</p>
+								</div>
+							</div>
+							<img class="infoItem__photo" src="./img/main/info/info__item__2.svg" alt="Contextual Insight">
+						</div>
+
+						<div class="infoItem keyPoints__anim">
+							<div class="infoItem__wrapper">
+								<div class="infoItem__title">
+									Threat Detection
+								</div>
+								<div class="infoItem__body">
+									<p>
+										Cypex leverages unique data sources to identify malicious activities before they become active
+									</p>
+								</div>
+							</div>
+							<img class="infoItem__photo" src="./img/main/info/info__item__3.svg" alt="Contextual Insight">
+						</div>
+
 					</div>
-					<div class="col-12">
-						<div class="keyPoints__description">
-							<p>
-								<strong>The Cypex offering </strong> introduces a fresh and innovative perspective on IP addresses. While IP addresses are a fundamental component of the internet, traditional cyber solutions have struggled to provide a clear understanding of what each IP represents, its true location and context, and, most importantly, who or what is behind it.
-							</p>
-						</div>
+				</div>
+				<div class="col-12">
+					<div class="keyPoints__description">
+						<p>
+							The Cypex offering introduces a fresh and innovative perspective on IP addresses. While IP addresses are a fundamental component of the internet, traditional cyber solutions have struggled to provide a clear understanding of what each IP represents, its true location and context, and, most importantly, who or what is behind it.
+						</p>
 					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
+	<main>
 		<section class="products" id="products">
 			<div class="sectionTitle products__anim">
 				Our Products
