added about + infoPage

--- a/cypex/index.html
+++ b/cypex/index.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="homePage">
+<body id="homePage" class="homePage">
 
 	<header class="header">
 		<div class="container-fluid">
@@ -43,10 +43,9 @@
 						</div>
 						<nav class="mainMenu__wrapper">
 							<ul class="mainMenu">
-								<li><a href="#" class="mainMenu__item">About us</a></li>
+								<li><a href="./aboutus.html" class="mainMenu__item">About us</a></li>
 								<li><a href="#" class="mainMenu__item">Case studies</a></li>
 								<li><a href="#" class="mainMenu__item">Products</a></li>
-								<li><a href="#" class="mainMenu__item">Contact us</a></li>
 							</ul>
 						</nav>
 						<div class="header__btnGroup">
@@ -405,7 +404,7 @@
 								Legal
 							</div>
 							<ul class="footer__groupList">
-								<li><a href="#">Privacy Policy</a></li>
+								<li><a href="./infopage.html">Privacy Policy</a></li>
 								<li><a href="#">Terms of Service</a></li>
 							</ul>
 						</div>
