--- a/cypex/index.html
+++ b/cypex/index.html
@@ -43,8 +43,8 @@
 						</div>
 						<nav class="mainMenu__wrapper">
 							<ul class="mainMenu">
-								<li><a href="./aboutus.html" class="mainMenu__item">About us</a></li>
-								<li><a href="#" class="mainMenu__item">Case studies</a></li>
+								<li><a href="aboutus.html" class="mainMenu__item hidden_desktop">About us</a></li>
+								<li><a href="casestudies.html" class="mainMenu__item">Case studies</a></li>
 								<li><a href="#" class="mainMenu__item">Products</a></li>
 							</ul>
 						</nav>
@@ -394,8 +394,8 @@
 								Company
 							</div>
 							<ul class="footer__groupList">
-								<li><a href="#">About us</a></li>
-								<li><a href="#">Case studies</a></li>
+								<li><a href="aboutus.html">About us</a></li>
+								<li><a href="casestudies.html">Case studies</a></li>
 								<li><a href="#">Products</a></li>
 							</ul>
 						</div>
