--- a/cypex/casestudies.html
+++ b/cypex/casestudies.html
@@ -31,7 +31,7 @@
 
 </head>
 
-<body class="caseStudies">
+<body class="caseStudies" id="caseStudies">
 
 	<header class="header">
 		<div class="container-fluid">
@@ -80,7 +80,7 @@
 			<div class="row">
 				<div class="col-12">
 					<div class="caseStudies__mainBanner">
-						<img src="./img/main/caseStudies.svg" alt="main banner">
+						<img src="./img/main/сaseStudies__1.png" alt="main banner">
 					</div>
 				</div>
 
@@ -95,12 +95,16 @@
 		</div>
 
 		<section class="caseStudies__steps">
-			<div class="sectionTitle">
-				These are the steps the attackers 
-took—steps only Cypex detected
-			</div>
 			<div class="container">
 				<div class="row">
+					<div class="col-12">
+						<div class="sectionTitle">
+							These are the steps the attackers 
+			took—steps only Cypex detected
+						</div>
+					</div>
+				</div>
+				<div class="row justify-content-center">
 					<div class="col-xl-11">
 						<div class="caseStudies__stepsWrapper">
 
